fix build.gradle and Flipper.java deprecate api bug.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,4 +18,12 @@ buildscript {
     }
 }
 
+//  mavenCentral { 
+//      // We don't want to fetch react-native from Maven Central as there are 
+//      // older versions over there. 
+//      content { 
+//          excludeGroup "com.facebook.react" 
+//      } 
+//  } 
+
 apply plugin: "com.facebook.react.rootproject"
